# harness-agent

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: code-reviewer.md  harness-architect.md  planner.md  python-reviewer.md  security-reviewer.md
.claude/commands/: code-review.md  plan.md  python-review.md  security-scan.md  test.md
.codegraph/: daemon.pid
.github/workflows/: agent-tests.yml
docs/: README.md  architecture-decisions.md  deep-agents-reference.md
docs/adr/: 001-agent-topology.md  002-middleware-pipeline.md  003-backend-strategy.md  004-subagent-topology.md  005-model-selection.md  006-system-prompt-architecture.md  009-error-handling-contract.md  010-custom-tools-architecture.md  README.md
docs/deep-agents/: 01-overview-architecture.md  02-api-reference.md  03-middleware.md  04-backends.md  05-subagents.md  06-memory.md  07-streaming.md  08-multi-agent.md  09-deepagents-code.md  README.md
docs/diagnostics/: skills-subagents-bugs.md
docs/fixes/: README.md  phase-0-critical.md  phase-1-security.md  phase-2-async-types.md  phase-3-dead-code.md  phase-4-style-cleanup.md
docs/guides/: README.md  aidlc-lifecycle.md
docs/html/: README.md  aidlc-architecture.html
docs/requirements/: harness-agent-requirements.md
docs/security/: security-configuration.md
memories/: context.md  feedback.md  learnings.md  preferences.md
scripts/: run_evaluation.py
src/harness_agent/: __init__.py  config.py  tool_inventory.py
tests/: conftest.py
tests/adversarial/: test_agent_robustness.py  test_injection_attacks.py
tests/evaluation/: __init__.py  test_evaluation_framework.py
tests/integration/: test_agent_pipeline.py  test_error_recovery.py  test_monitoring_e2e.py  test_streaming.py  test_subagent_orchestration.py
tests/regression/: __init__.py  test_regression.py
tests/unit/: test_agent.py  test_config.py  test_deployment.py  test_exceptions.py  test_memory.py  test_middleware.py  test_monitoring_alerts.py  test_monitoring_config.py  test_monitoring_debug.py  test_monitoring_metrics.py  test_monitoring_middleware.py  test_security.py  (+7 more)
(+103 files in other folders)
